--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -24,7 +24,7 @@
 
         <nav class="navigation container">
 
-            <a href="#home" class="nav-logo">
+            <a href="/index.html" class="nav-logo">
                 <img src="/assets/IMG/Logo.svg" alt="J & A logo">
             </a>
 
@@ -77,12 +77,14 @@
             <img src="/assets/IMG/projects-background-image.png" alt="Projects background image" id="home-background-image" class="projects-background-image scale">
         </section>
 
+         <!-- ========================================================== -->
+
         <section class="projects-showcase section" id="projects-showcase-1">
 
             <div class="projects-showcase-container container flex-column">
 
                 <div class="projects-title-group">
-                    <h2 class="project-showcase-title section-title">307 W 32nd St.</h2>
+                    <h2 class="project-showcase-title section-title">703 Malone</h2>
                     <ul class="project-title-flex-group">
                         <li><p class="project-description"></p>4 Bedrooms</li>
                         <li><p class="project-description"></p> 1700 sq ft.</li>
@@ -92,12 +94,13 @@
                 </div>
 
                 <ul class="showcase-grid grid">
-                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/IMG/gallery-one.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/IMG/gallery-two.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/IMG/gallery-three.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/IMG/gallery-four.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/IMG/gallery-five.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-six bottom"><img src="/assets/IMG/gallery-six.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-49.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-50.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-51.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-52.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-53.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-six bottom"><img src="/assets/PORT-IMG/port-54.png" alt="Projects image"></li>
+
                 </ul>
             </div>
 
@@ -108,22 +111,23 @@
             <div class="projects-showcase-container container flex-column">
 
                 <div class="projects-title-group">
-                    <h2 class="project-showcase-title section-title">528 W 31st St.</h2>
+                    <h2 class="project-showcase-title section-title">11101 Beinhorn</h2>
                     <ul class="project-title-flex-group">
                         <li><p class="project-description"></p>4 Bedrooms</li>
                         <li><p class="project-description"></p> 1700 sq ft.</li>
                         <li><p class="project-description"></p>3 bathrooms</li>
-                        <li><div class="project-avaliability"><p>SOLD</p></div></li>
+                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
                     </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
-                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/IMG/gallery-14.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/IMG/gallery-9.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/IMG/gallery-12.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/IMG/gallery-13.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/IMG/gallery-10.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-six bottom"><img src="/assets/IMG/gallery-11.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-43.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-44.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-45.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-46.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-47.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-six bottom"><img src="/assets/PORT-IMG/port-48.png" alt="Projects image"></li>
+
                 </ul>
             </div>
 
@@ -134,64 +138,155 @@
             <div class="projects-showcase-container container flex-column">
 
                 <div class="projects-title-group">
-                    <h2 class="project-showcase-title section-title">3762 Georgetown</h2>
+                    <h2 class="project-showcase-title section-title">4027 Sul Ross</h2>
                     <ul class="project-title-flex-group">
-                        <li><p class="project-description"></p>5 Bedrooms</li>
-                        <li><p class="project-description"></p> 2100 sq ft.</li>
-                        <li><p class="project-description"></p>4.5 bathrooms</li>
-                        <li><div class="project-avaliability"><p>SOLD</p></div></li>
+                        <li><p class="project-description"></p>4 Bedrooms</li>
+                        <li><p class="project-description"></p> 1700 sq ft.</li>
+                        <li><p class="project-description"></p>3 bathrooms</li>
+                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
                     </ul>
                 </div>
 
                 <ul class="showcase-grid grid">
-                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/IMG/gallery-15.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/IMG/gallery-16.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/IMG/gallery-17.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/IMG/gallery-18.png" alt="Projects image"></li>
-                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/IMG/gallery-19.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-37.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-38.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-39.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-40.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-41.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-six bottom"><img src="/assets/PORT-IMG/port-42.png" alt="Projects image"></li>
+
                 </ul>
             </div>
 
         </section>
 
-        <section class="contact section" id="contact">
+        <section class="projects-showcase section" id="projects-showcase-4">
 
-            <div class="contact-container container flex-column">
+            <div class="projects-showcase-container container flex-column">
 
-                <div class="contact-titles-container flex-column">
-                    <h2 class="section-title contact-title bottom">Let's get in <span>Touch</span></h2>
-                    <p class="contact-description description-regular bottom-delayed">
-                        if you have any questions, fill out the form 
-                        below and we will get back with you as soon
-                        as possible !
-                    </p>
+                <div class="projects-title-group">
+                    <h2 class="project-showcase-title section-title">4011 West Main</h2>
+                    <ul class="project-title-flex-group">
+                        <li><p class="project-description"></p>4 Bedrooms</li>
+                        <li><p class="project-description"></p> 1700 sq ft.</li>
+                        <li><p class="project-description"></p>3 bathrooms</li>
+                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
+                    </ul>
                 </div>
 
-                <form action="#" class="contact-form grid" id="contact-form">
+                <ul class="showcase-grid grid">
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-31.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-32.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-33.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-34.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-35.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-six bottom"><img src="/assets/PORT-IMG/port-36.png" alt="Projects image"></li>
 
-                    <div class="contact-form-group">
-                        <label class="bottom">Name</label>
-                        <input type="text"  class="contact-form-text bottom-delayed" name="name">
-                    </div>
+                </ul>
+            </div>
 
-                    <div class="contact-form-group">
-                        <label class="bottom">Phone or email</label>
-                        <input type="text"  class="contact-form-text bottom-delayed" name="email">
-                    </div>
+        </section>
 
-                    <div class="contact-form-group grid-item-three">
-                        <label class="bottom">Message</label>
-                        <textarea class="contact-form-text bottom-delayed" id="contact-project" name="message" required></textarea>
-                    </div>
+        <section class="projects-showcase section" id="projects-showcase-5">
 
-                    <div class="contact-button grid-item-four bottom">
-                        <button type="submit" class="contact-button" id="contact-button"><h4>Send form</h4><img src="/assets/IMG/arrow-icon.svg" alt="arrow-icon"></button>
-                    </div>
+            <div class="projects-showcase-container container flex-column">
 
-                    <div class="contact-message" id="contact-message"></div>
+                <div class="projects-title-group">
+                    <h2 class="project-showcase-title section-title">4006 Essex</h2>
+                    <ul class="project-title-flex-group">
+                        <li><p class="project-description"></p>4 Bedrooms</li>
+                        <li><p class="project-description"></p> 1700 sq ft.</li>
+                        <li><p class="project-description"></p>3 bathrooms</li>
+                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
+                    </ul>
+                </div>
 
-                </form>
+                <ul class="showcase-grid grid">
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-26.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-27.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-28.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-29.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-30.png" alt="Projects image"></li>
 
+                </ul>
+            </div>
+
+        </section>
+
+        <section class="projects-showcase section" id="projects-showcase-6">
+
+            <div class="projects-showcase-container container flex-column">
+
+                <div class="projects-title-group">
+                    <h2 class="project-showcase-title section-title">3762 Georgetown</h2>
+                    <ul class="project-title-flex-group">
+                        <li><p class="project-description"></p>4 Bedrooms</li>
+                        <li><p class="project-description"></p> 1700 sq ft.</li>
+                        <li><p class="project-description"></p>3 bathrooms</li>
+                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
+                    </ul>
+                </div>
+
+                <ul class="showcase-grid grid">
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-15.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-16.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-17.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-18.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-19.png" alt="Projects image"></li>
+
+                </ul>
+            </div>
+
+        </section>
+
+        <section class="projects-showcase section" id="projects-showcase-7">
+
+            <div class="projects-showcase-container container flex-column">
+
+                <div class="projects-title-group">
+                    <h2 class="project-showcase-title section-title">528 W 31st</h2>
+                    <ul class="project-title-flex-group">
+                        <li><p class="project-description"></p>4 Bedrooms</li>
+                        <li><p class="project-description"></p> 1700 sq ft.</li>
+                        <li><p class="project-description"></p>3 bathrooms</li>
+                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
+                    </ul>
+                </div>
+
+                <ul class="showcase-grid grid">
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-8.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-9.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-10.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-11.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-12.png" alt="Projects image"></li>
+
+                </ul>
+            </div>
+
+        </section>
+
+        <section class="projects-showcase section" id="projects-showcase-8">
+
+            <div class="projects-showcase-container container flex-column">
+
+                <div class="projects-title-group">
+                    <h2 class="project-showcase-title section-title">307 W 32nd</h2>
+                    <ul class="project-title-flex-group">
+                        <li><p class="project-description"></p>4 Bedrooms</li>
+                        <li><p class="project-description"></p> 1700 sq ft.</li>
+                        <li><p class="project-description"></p>3 bathrooms</li>
+                        <li><div class="project-avaliability"><p>Avaliable</p></div></li>
+                    </ul>
+                </div>
+
+                <ul class="showcase-grid grid">
+                    <li class="showcase-item-container grid-item-primary bottom"><img src="/assets/PORT-IMG/port-1.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-secondary bottom"><img src="/assets/PORT-IMG/port-2.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-tre bottom"><img src="/assets/PORT-IMG/port-3.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-four bottom"><img src="/assets/PORT-IMG/port-4.png" alt="Projects image"></li>
+                    <li class="showcase-item-container grid-item-five bottom"><img src="/assets/PORT-IMG/port-5.png" alt="Projects image"></li>
+
+                </ul>
             </div>
 
         </section>
@@ -272,6 +367,7 @@
     </footer> 
     
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="/assets/ETX-routes/javascript/header.js"></script>
     <script src="/assets/ETX-routes/javascript/reusable-js.js"></script>
