--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 
                 <ul class="gallery-grid-list grid">
                     <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-background-image.png" class="bottom" alt="About image one"></li>
-                    <li class="gallery-grid-item g-i-2"><img src="assets/IMG/gallery-three.png" class="right" alt="About image two"></li>
-                    <li class="gallery-grid-item g-i-3"><img src="assets/IMG/gallery-four.png" class="bottom" alt="About image three"></li>
+                    <li class="gallery-grid-item g-i-2"><img src="assets/PORT-IMG/port-1.png" class="right" alt="About image two"></li>
+                    <li class="gallery-grid-item g-i-3"><img src="assets/PORT-IMG/port-14.png" class="bottom" alt="About image three"></li>
                     <li class="gallery-grid-item g-i-4"><img src="assets/IMG/projects-background-image.png" class="top" alt="About image four"></li>
-                    <li class="gallery-grid-item g-i-5"><img src="assets/IMG/gallery-8.webp" class="right" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-6"><img src="assets/IMG/gallery-9.png" class="bottom" alt="About image six"></li>
-                    <li class="gallery-grid-item g-i-7"><img src="assets/IMG/gallery-10.png" class="left" alt="About image seven"></li>
-                    <li class="gallery-grid-item g-i-8"><img src="assets/IMG/gallery-11.png" class="right" alt="About image eight"></li>
+                    <li class="gallery-grid-item g-i-5"><img src="assets/PORT-IMG/port-19.png" class="right" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-6"><img src="assets/PORT-IMG/port-5.png" class="bottom" alt="About image six"></li>
+                    <li class="gallery-grid-item g-i-7"><img src="assets/PORT-IMG/port-21.png" class="left" alt="About image seven"></li>
+                    <li class="gallery-grid-item g-i-8"><img src="assets/PORT-IMG/port-52.png" class="right" alt="About image eight"></li>
 
                 </ul>
 
@@ -205,57 +205,51 @@
                 <div class="swiper-wrapper">
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">307 W 32nd</h4>
+                        <h4 class="portfolio-card-title">703 Malone</h4>
                         <a href="assets/pages/projects.html#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-two.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/PORT-IMG/port-49.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">528 W 31st</h4>
+                        <h4 class="portfolio-card-title">11101 Beinhorn</h4>
                         <a href="assets/pages/projects.html#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-8.webp" alt="Portfolio image 1" class="portfolio-card-img">
+                        <img src="assets/PORT-IMG/port-43.png" alt="Portfolio image 1" class="portfolio-card-img">
+                    </div>
+
+                    <div class="portfolio-card swiper-slide">
+                        <h4 class="portfolio-card-title">4027 Sul Ross</h4>
+                        <a href="assets/pages/projects.html#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <img src="assets/PORT-IMG/port-37.png" alt="Portfolio image 1" class="portfolio-card-img">
+                    </div>
+
+                    <div class="portfolio-card swiper-slide">
+                        <h4 class="portfolio-card-title">4011 West Main</h4>
+                        <a href="assets/pages/projects.html#projects-showcase-4" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <img src="assets/PORT-IMG/port-31.png" alt="Portfolio image 1" class="portfolio-card-img">
+                    </div>
+
+                    <div class="portfolio-card swiper-slide">
+                        <h4 class="portfolio-card-title">4006 Essex</h4>
+                        <a href="assets/pages/projects.html#projects-showcase-5" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <img src="assets/PORT-IMG/port-26.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">3762 Georgetown</h4>
-                        <a href="assets/pages/projects.html#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-15.png" alt="Portfolio image 1" class="portfolio-card-img">
-                    </div>
-
-                    <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">307 W 32nd</h4>
-                        <a href="assets/pages/projects.html#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-three.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <a href="assets/pages/projects.html#projects-showcase-6" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <img src="assets/PORT-IMG/port-15.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">528 W 31st</h4>
-                        <a href="assets/pages/projects.html#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-12.png" alt="Portfolio image 1" class="portfolio-card-img">
-                    </div>
-
-                    <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">3762 Georgetown</h4>
-                        <a href="assets/pages/projects.html#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-16.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <a href="assets/pages/projects.html#projects-showcase-7" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <img src="assets/PORT-IMG/port-8.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">307 W 32nd</h4>
-                        <a href="assets/pages/projects.html#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-five.png" alt="Portfolio image 1" class="portfolio-card-img">
-                    </div>
-
-                    <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">528 W 31st</h4>
-                        <a href="assets/pages/projects.html#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-9.png" alt="Portfolio image 1" class="portfolio-card-img">
-                    </div>
-
-                    <div class="portfolio-card swiper-slide">
-                        <h4 class="portfolio-card-title">3762 Georgetown</h4>
-                        <a href="assets/pages/projects.html#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
-                        <img src="assets/IMG/gallery-16.png" alt="Portfolio image 1" class="portfolio-card-img">
+                        <a href="assets/pages/projects.html#projects-showcase-8" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <img src="assets/PORT-IMG/port-1.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     
@@ -271,7 +265,7 @@
                 <ul class="about-box-one grid">
                     <li class="a-i-1 about-list-item left"><h4>10 +</h4><p>Years of experiance</p></li>
                     <li class="a-i-2 about-list-item right"><h4>1000 +</h4><p>Completed projects</p></li>
-                    <li class="a-i-3 about-list-item bottom"><img class="about-img" src="assets/IMG/gallery-16.png" alt="About image"></li>
+                    <li class="a-i-3 about-list-item bottom"><img class="about-img" src="assets/PORT-IMG/port-51.png" alt="About image"></li>
                 </ul>
 
                 <div class="about-box-two flex-column">
