--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -24,7 +24,7 @@
 
         <nav class="navigation container">
 
-            <a href="#home" class="nav-logo">
+            <a href="/index.html" class="nav-logo">
                 <img src="/assets/IMG/Logo.svg" alt="J & A logo">
             </a>
 
@@ -75,32 +75,32 @@
 
             <div class="images-gallery-container container grid">
 
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-20.png" alt="image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-21.png" alt="gallery image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-56.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-55.png" alt="gallery image"></div>
                 <div class="image-card-video image-card-alt">
                     <iframe src="https://player.vimeo.com/video/980101736?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-22.png" alt="image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-24.png" alt="image"></div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-five.png" alt="gallery image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-six.png" alt="gallery image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-54.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-53.png" alt="image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-52.png" alt="gallery image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-51.png" alt="gallery image"></div>
                 <div class="image-card-video image-card-alt">
                     <iframe src="https://player.vimeo.com/video/980120117?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-8.webp" alt="image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-9.png" alt="gallery image"></div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-10.png" alt="image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-11.png" alt="image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-50.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-49.png" alt="gallery image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-48.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-47.png" alt="image"></div>
                 <div class="image-card-video image-card-alt">
                     <iframe src="https://player.vimeo.com/video/980120170?background=1&dnt=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-12.png" alt="gallery image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-13.png" alt="gallery image"></div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-14.png" alt="image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-15.png" alt="gallery image"></div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-16.png" alt="image"></div>
-                <div class="image-card-secondary image-card"><img src="/assets/IMG/gallery-17.png" alt="image"></div>
-                <div class="image-card-primary image-card"><img src="/assets/IMG/gallery-19.png" alt="gallery image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-46.png" alt="gallery image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-45.png" alt="gallery image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-44.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-43.png" alt="gallery image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-42.png" alt="image"></div>
+                <div class="image-card-secondary image-card"><img src="/assets/PORT-IMG/port-41.png" alt="image"></div>
+                <div class="image-card-primary image-card"><img src="/assets/PORT-IMG/port-40.png" alt="gallery image"></div>
 
             </div>
 
@@ -224,6 +224,7 @@
     </footer> 
     
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="/assets/ETX-routes/javascript/header.js"></script>
     <script src="/assets/ETX-routes/javascript/reusable-js.js"></script>
