--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-background-image.png" class="bottom" alt="About image one"></li>
                     <li class="gallery-grid-item g-i-2"><img src="assets/PORT-IMG/port-1.png" class="right" alt="About image two"></li>
                     <li class="gallery-grid-item g-i-3"><img src="assets/PORT-IMG/port-14.png" class="bottom" alt="About image three"></li>
-                    <li class="gallery-grid-item g-i-4"><img src="assets/IMG/projects-background-image.png" class="top" alt="About image four"></li>
+                    <li class="gallery-grid-item g-i-4"><img src="assets/PORT-IMG/port-26.png" class="top" alt="About image four"></li>
                     <li class="gallery-grid-item g-i-5"><img src="assets/PORT-IMG/port-19.png" class="right" alt="About image five"></li>
                     <li class="gallery-grid-item g-i-6"><img src="assets/PORT-IMG/port-5.png" class="bottom" alt="About image six"></li>
                     <li class="gallery-grid-item g-i-7"><img src="assets/PORT-IMG/port-21.png" class="left" alt="About image seven"></li>
